rollouts/setup/ingress_prom.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.bernardolopes.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: prometheus-server
                port:
                  number: 9090
